--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -88,6 +88,7 @@ community this program would not have come into existence.
                  ready to be used for {\prg mcdiff}\index{mcdiff}
 \item {\prg pointc}\index{pointc} output creates automaticalle files results/pointc.Blm and results/pointc.Lllm with just the CF parameters
 \item {\prg mcdisp}\index{mcdisp} option -ignore\_non\_hermitian\_matrix\_error introduced , eigensolvers updated
+\item {\prg simannfit}\index{simannfit} option -n  introduced, for storage of parametersets during fitting.
 \item {\prg cif2mcphas}\index{cif2mcphas} program to create mcphase input files from crystallographic information in cif files
 \item mcdisp.jq has now a col 4 with qincr for plotting purposes
 \item bugs fixed in {\prg convolute2d, rhoso1ion, module brillouin, so1ion} Blm input for m odd, getvalue
