tiny changes for issuing mcphas 5_2 alpha

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -10,8 +10,8 @@
 \usepackage{lscape}
 \usepackage{amssymb}
 \usepackage{amsbsy}
-\usepackage{bbm}
-\usepackage{dsfont}
+%\usepackage{bbm}
+%\usepackage{dsfont}
 \makeindex
 \newcommand{\m}[1]{\overline{#1}}
 \newcommand{\M}[1]{\underline{#1}}
