--- a/doc/mcdisp.tex
+++ b/doc/mcdisp.tex
@@ -50,7 +50,8 @@ spin-, orbital- and total angular momentum, respectively in a coordinate system 
 $y||b$,$z||(a \times b)$ and $x$ perpendicular to $y$ and $z$).
 				\item To create an output
 				of the Fourier transform ${\mathcal J}({\mbf Q})$ use option
-				{\prg -jq}. 
+				{\prg -jq} (outputs largest eigenvalue of ${\mathcal J}({\mbf Q})$ and 
+corresponding eigenvector) or option {\prg -jqe} (outputs all eigenvalues). 
 				\item {\prg -v} option is to display\index{display} more information.
                                 
 				\item Option {\prg -a} can be used to avoid overwriting output files in results, new results
