singleion extended to output MQ

--- a/doc/extsimod.tex
+++ b/doc/extsimod.tex
@@ -28,6 +28,8 @@ INTERNAL MODULES  & \\
 \hline
 {\prg cluster} & defined in sipf file\\
 \hline
+{\prg phonon} & $\hat u_a,\hat u_b,\hat u_c$\\
+\hline
 \hline
 EXTERNAL MODULES & \\
 \hline
