mcphas2jvx bug for nonprimitive lattices removed

--- a/doc/ffacts.tex
+++ b/doc/ffacts.tex
@@ -40,6 +40,13 @@ The coefficients A, a, B, b, C, c, D for $l=0,2,4,6$ and different ions are tabu
 
 {\footnotesize
 \begin{verbatim}
+
+# For Ce3+ 4f1 Lisher and Forsyth acta cryst A27 (1971) 545
+FFj0A=+0.2291 FFj0a=+18.18 FFj0B=+0.7897 FFj0b=+5.807 FFj0C=-0.0191 FFj0c=0.0000 FFj0D=0.0000
+FFj2A=+2.1284 FFj2a=+8.9174 FFj2B=+1.1229 FFj2b=+2.8371 FFj2C=+0.01108 FFj2c=0.000 FFj2D=+0.0000
+FFj4A=+0.4221 FFj4a=+1.7572 FFj4B=-0.4087 FFj4b=+14.604 FFj4C=+0.01465 FFj4c=+0.000 FFj4D=+0.0000
+FFj6A=+0.13076 FFj6a=+0.8650 FFj6B=-0.15173 FFj6b=+5.6704 FFj6C=+0.00281 FFj6c=+0.000 FFj6D=+0.0000
+
 # The attached my be the most useful electronic form of the data.
 # The lines which start F contain the name of the factor
 # followed by an integer (2 or 4) which indicate whether  (4 j2 and j4,j6)
