small bug trsio fixed

--- a/doc/mcdisp.tex
+++ b/doc/mcdisp.tex
@@ -52,6 +52,8 @@ $y||b$,$z||(a \times b)$ and $x$ perpendicular to $y$ and $z$).
 				of the Fourier transform ${\mathcal J}({\mbf Q})$ use option
 				{\prg -jq} (outputs largest eigenvalue of ${\mathcal J}({\mbf Q})$ and 
 corresponding eigenvector) or option {\prg -jqe} (outputs all eigenvalues). 
+If energies are given for hkls in mcdisp.par, output file mcdisp\_scaled.jq contains scaled parameters
+such that energy of first hkl set corresponds to highest eigenvalue of ${\mathcal J}({\mbf Q})$.
 				\item {\prg -v} option is to display\index{display} more information.
                                 
 				\item Option {\prg -a} can be used to avoid overwriting output files in results, new results
