bug makenn option bvk and mcdisp phonon int nan removed

--- a/doc/bfktheory.tex
+++ b/doc/bfktheory.tex
@@ -4,7 +4,7 @@ electrons}\label{bfktheory}
 
 \medskip
 This is an extension  of the theory published by Klaus W. Becker, Peter Fulde and
-Joachim Keller in Z. Physik B 28,9-18, 1977 
+Joachim Keller in Z. Physik B 28,9-18, 1977 \cite{becker77-9}
 "Line width of crystal-field excitations in metallic rare-earth systems"
 and an  introduction to the computer program for the calculation of  the neutron 
 scattering cross section. The computer program {\prg bfk} is written by J. Keller,
