--- a/doc/ffacts.tex
+++ b/doc/ffacts.tex
@@ -46,6 +46,8 @@ FFj0A=+0.2291 FFj0a=+18.18 FFj0B=+0.7897 FFj0b=+5.807 FFj0C=-0.0191 FFj0c=0.0000
 FFj2A=+2.1284 FFj2a=+8.9174 FFj2B=+1.1229 FFj2b=+2.8371 FFj2C=+0.01108 FFj2c=0.000 FFj2D=+0.0000
 FFj4A=+0.4221 FFj4a=+1.7572 FFj4B=-0.4087 FFj4b=+14.604 FFj4C=+0.01465 FFj4c=+0.000 FFj4D=+0.0000
 FFj6A=+0.13076 FFj6a=+0.8650 FFj6B=-0.15173 FFj6b=+5.6704 FFj6C=+0.00281 FFj6c=+0.000 FFj6D=+0.0000
+\end{verbatim}
+\begin{verbatim}
 
 # The attached my be the most useful electronic form of the data.
 # The lines which start F contain the name of the factor
@@ -54,6 +56,8 @@ FFj6A=+0.13076 FFj6a=+0.8650 FFj6B=-0.15173 FFj6b=+5.6704 FFj6C=+0.00281 FFj6c=+
 #
 # Best regards
 # Jane Brown
+\end{verbatim}
+\begin{verbatim}
 
 #Z <j0> form factors for 3d transition elements and their ions
 #Z
@@ -274,6 +278,10 @@ FFj6A=+0.13076 FFj6a=+0.8650 FFj6B=-0.15173 FFj6b=+5.6704 FFj6C=+0.00281 FFj6c=+
 {F Am5  4} FFj2A= 2.0109 FFj2a=12.0534 FFj2B= 2.4155 FFj2b= 4.8358 FFj2C=-0.2264 FFj2c= 0.0275 FFj2D= 0.2128 
 {F Am6  4} FFj2A= 1.6778 FFj2a=11.3372 FFj2B= 2.4531 FFj2b= 4.7247 FFj2C=-0.2043 FFj2c= 0.0337 FFj2D= 0.1892 
 {F Am7  4} FFj2A= 1.8845 FFj2a= 9.1606 FFj2B= 2.0746 FFj2b= 4.0422 FFj2C=-0.1318 FFj2c= 1.7227 FFj2D= 0.0020 
+
+\end{verbatim}
+\begin{verbatim}
+
 #Z
 #Z <j4> form factors for 3d atoms and ions
 #Z
@@ -385,6 +393,9 @@ FFj6A=+0.13076 FFj6a=+0.8650 FFj6B=-0.15173 FFj6b=+5.6704 FFj6C=+0.00281 FFj6c=+
 {F Am5  4} FFj4A=-0.6538 FFj4a=15.4625 FFj4B=-0.0948 FFj4b= 5.9971 FFj4C= 0.7295 FFj4c= 2.2968 FFj4D= 0.0000 
 {F Am6  4} FFj4A=-0.5390 FFj4a=15.4491 FFj4B=-0.2689 FFj4b= 6.0169 FFj4C= 0.7711 FFj4c= 2.2970 FFj4D= 0.0002 
 {F Am7  4} FFj4A=-0.4688 FFj4a=12.0193 FFj4B=-0.2692 FFj4b= 7.0415 FFj4C= 0.7297 FFj4c= 2.1638 FFj4D=-0.0011 
+\end{verbatim}
+\begin{verbatim}
+
 #Z
 #Z <j6> form factors for rare earth ions
 #Z
@@ -450,8 +461,11 @@ Acta Cryst (2011). A67, 473–480:
 # j0  form factors for the 5d electrons of transition atoms and ions  
 #
 # Atoms and ions
-#￼electronic configuration)   A0 a0 B0 b0 C0 c0 D0 d0 E0 e(deviation of fit)
+# electronic configuration   A0 a0 B0 b0 C0 c0 D0 d0 E0 e (deviation of fit)
 #
+\end{verbatim}
+\begin{verbatim}
+
 Hf2p_6s05d2 FFj0A=0.4229 FFj0a=50.465 FFj0B=0.7333 FFj0b=23.865 FFj0C=0.3798 FFj0c=4.051 FFj0D=0.2252 FFj0d=2.497 FFj0E=0.0018 0.0080
 Hf3p_6s05d1 FFj0A=0.3555 FFj0a=40.954 FFj0B=0.8483 FFj0b=21.726 FFj0C=0.4116 FFj0c=4.305 FFj0D=0.2101 FFj0d=2.349 FFj0E=0.0023 0.0051
 Ta2p_6s05d3 FFj0A=0.3976 FFj0a=45.095 FFj0B=0.7746 FFj0b=21.028 FFj0C=0.6098 FFj0c=3.471 FFj0D=0.4395 FFj0d=2.570 FFj0E=0.0020 0.0077
