--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -280,7 +280,7 @@ diagram, lines correspond to experimentally determined phase boundaries.
 \end{figure}
 
 
-\section{Getting Started ...}  
+\section{Getting Started ... List of Examples}  
 
 First some important notes .... this manual does neither give an introduction into the theory of 
 magnetism nor a description of the experimental techniques. In order
@@ -320,11 +320,12 @@ examples}:}
 \label{examples}   
 \begin{tabular} 
 {l|l|l|l}
-compound & problem & single ion & references \\ 
-        &          & module  &             \\
+name /       & problem & single ion & references \\ 
+compound     &          & module  &             \\
 \hline
-CeCu$_2$  & mag phase diagram, fit of dispersive mag. excitations to neutron data & {\prg kramer}\index{kramer} & %%@
-\cite{loewenhaupt06-775,schedler03-1313} \\
+{\prg bfk }    & Becker Fulde Keller Theorie for CF-conduction electron interaction & {\prg so1ion }\index{bfk} &  \cite{becker77-9}, App.~\ref{bfktheory} \\
+CeCu$_2$  & mag phase diagram, fit of dispersive mag. excitations to neutron data & {\prg kramer}\index{kramer} & \cite{loewenhaupt06-775,schedler03-1313} \\
+CeCu$_2$Ge$_2$ & crystal field - phonon interaction & {\prg phonon, bcfph }  & \\
 CePd$_2$Si$_2$ & neutron diffraction going beyond dipolar approx for mag. formfactor & {\prg %%@
 so1ion}&\cite{rotter09-140405} \\
 CoO & magnetic formfactor - flipping ratios, highly inelastic neutron scattering  &{\prg  ic1ion} & \\
@@ -349,6 +350,7 @@ PrNi$_2$Si$_2$ & excitons in an amplitude modulated mag structure & {\prg so1ion
 Pr$_3$Pd$_{20}$Si$_6$ & hyperfine interactions & {\prg cluster}\index{cluster} & \\
 PuPd$_3$ & susceptibility, heat capacity & {\prg ic1ion}\index{ic1ion} & \cite{le10-155136} \\
 TbCu$_2$ & magnetic phases with field parallel $a$ & {\prg cfield} \\
+test\_cluster & test of a b inary cluster of two spins & {\prg cluster} & \\
 testic1ion & Pr$^{3+}$ chargedensity in IC and LS coupling & {\prg ic1ion,cfield} &\\
 tungsten& phonons in tungsten & {\prg phonon} & \\
 UPd$_3$ & dispersive CEF excitations, quadrupolar interactions  & {\prg so1ion}\index{so1ion} & \cite{le12-036002} \\
