--- a/doc/shortlist.tex
+++ b/doc/shortlist.tex
@@ -13,7 +13,7 @@ anisotropy & 	[mcphas.j]	&	cif2mcphas and makenn \\
 		&			&	cif2mcphas and edit with mpe \\	
 bfk		&	*.cef		&     singleion \\
 		&      *.par           &    editor, copy from example and edit \\	
-bfkp          &  results/op.mat  & singleion wit option  -opmat  \\
+bcfph          &  results/op.mat  & singleion wit option  -opmat  \\
                 &   phonon.int     &     parlinsky program for phonons *.d51 \\
                 &  g\_alpha.s      &  adapt makegalphas.pl from examples cecu2ge2\_cf\_phonon\_int \\  
 cpsingleion	&	results/*.sipf.levels &	singleion \\
